--- a/prototype_tapa/export_presets.cfg
+++ b/prototype_tapa/export_presets.cfg
@@ -1,13 +1,13 @@
 [preset.0]
 
-name="HTML5"
-platform="HTML5"
+name="Mac OSX"
+platform="Mac OSX"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Escritorio/bug_rush/html/index.html"
+export_path="../../../Escritorio/bug_rush/macosx/BugRush.x86_64.zip"
 script_export_mode=1
 script_encryption_key=""
 
@@ -15,10 +15,17 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-variant/export_type=0
-vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=false
-html/custom_html_shell=""
-html/head_include=""
-html/canvas_resize_policy=2
-html/experimental_virtual_keyboard=false
+application/name="BugRush"
+application/info="Made with Godot Engine"
+application/icon="res://assets/thumbnail/proyect_icon.png"
+application/identifier=""
+application/signature=""
+application/short_version="1.0"
+application/version="1.0"
+application/copyright=""
+display/high_res=false
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
